[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = ["Mohammadnim123 <mm.nemrawi96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
